--- a/index.html
+++ b/index.html
@@ -784,9 +784,9 @@
       <div class="container mx-auto">
         <div class="grid grid-cols-2 gap-4">
             <div class="col-span-2">
-              <div class="text-center p-3">
+              <div class="text-center pt-4">
                 <h2 class="font-bold text-lg">Pipes and plumbing connections  </h2>
-                <a href="#" class=" text-white text-center text-sm font-blod w-40 block mt-5 mx-auto bg-main p-3 rounded-full"> Read More <i class="fa-solid fa-chevron-right pt-1 fa-fade"></i> </a>
+                <p class="text-sm">YouMats is one of the biggest building materials suppliers in Saudi  Arabia.</p>                
               </div>              
             </div>
             
@@ -859,10 +859,46 @@
               </div>          
             </div>
 
+            <div class="col-span-2">
+              <a href="#" class=" text-white text-center text-sm font-blod w-40 block mx-auto mb-4 mt-2 bg-main p-3 rounded-full"> Read More <i class="fa-solid fa-chevron-right pt-1 fa-fade"></i> </a>
+            </div>
+            
+
         </div>
       </div>
     </section>
 
+
+    <section class="banner-home mx-auto px-3 mb-4">
+      <div class="container mx-auto">
+          <div class="grid grid-cols-3 gap-4">
+              <div class="col-span-3">
+                  <div class="tit-section-products bg-black relative h-44 overflow-hidden rounded-md flex">
+                      <a href="#" class="block h-full">
+                          <img src="images/c-5.webp" alt="" title="" class="w-full h-auto absolute opacity-50 hover:opacity-60">
+                          <h2 class="absolute top-20 left-0 right-0 text-center font-blod text-3xl px-5 text-white"> Fire Pumps </h2>            
+                      </a>                
+                   </div>
+              </div>
+              <div class="col-span-3">
+                  <div class="tit-section-products bg-black relative h-44 overflow-hidden rounded-md flex">
+                      <a href="#" class="block h-full">
+                          <img src="images/c-4.jpg" alt="" title="" class="w-full h-auto absolute opacity-50 hover:opacity-60">
+                          <h2 class="absolute top-20 left-0 right-0 text-center font-blod text-3xl px-5 text-white"> Precast  Concrete </h2>            
+                      </a>                
+                   </div>
+              </div>
+              <div class="col-span-3">
+                  <div class="tit-section-products bg-black relative h-44 overflow-hidden rounded-md flex">
+                      <a href="#" class="block h-full">
+                          <img src="images/c-2.jpg" alt="" title="" class="w-full h-auto absolute opacity-50 hover:opacity-60">
+                          <h1 class="absolute top-20 left-0 right-0 text-center font-blod text-3xl px-5 text-white"> Carpentry supplies </h1>            
+                      </a>                
+                   </div>
+              </div>
+          </div>
+      </div>
+  </section>
 
 
     <section class="vendor p-3 mb-7 bg-gray-200">
@@ -1071,6 +1107,8 @@
         </div>
       </div>
     </section>
+
+
 
 
     <footer class="mt-4 pb-20">
