--- a/Products.html
+++ b/Products.html
@@ -674,6 +674,7 @@
                           </label>                         
                         </div> 
 
+                        <a href="#" class="block text-white mt-5 text-center font-blod w-full bg-main p-3 rounded-md"> Search Now </a>
 
 
                       </div>
