--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
           <div class="col-span-2">
             <div class="text-center p-3">
               <h3 class="font-bold text-lg">Fire Extinguishers </h3>
-              <a href="#" class=" text-white text-center text-sm font-blod w-28 block mt-3 mx-auto bg-main p-2 rounded-full"> View All <i class="fa-solid fa-chevron-right pt-1 fa-fade"></i> </a>
+              <p class="text-sm">YouMats is one of the biggest building materials suppliers in Saudi  Arabia.</p>  
             </div>              
           </div>
 
@@ -1102,6 +1102,10 @@
                   <a href="#" class="block text-center pt-2 w-10 h-10 rounded-full text-base border my-3 border-gray-200 hover:bg-gray-200"> <i class="fa-solid fa-heart"></i> </a>
               </div>    
             </div>          
+          </div>
+
+          <div class="col-span-2">
+            <a href="#" class=" text-white text-center text-sm font-blod w-40 block mx-auto mb-4 mt-2 bg-main p-3 rounded-full"> Read More <i class="fa-solid fa-chevron-right pt-1 fa-fade"></i> </a>
           </div>
 
         </div>
